--- a/django_cowhite_blog/templates/django_cowhite_blog/blog_post_list.html
+++ b/django_cowhite_blog/templates/django_cowhite_blog/blog_post_list.html
@@ -25,4 +25,21 @@ Blog
 </div>
 {% endfor %}
 
+
+<nav aria-label="Pagination">
+  <ul class="pagination">
+    {% if blog_posts.has_previous %}
+        <li class="page-item"><a class="page-link" href="?page={{ blog_posts.previous_page_number }}">Previous</a></li>
+    {% endif %}
+    <li class="page-item">
+      <a class="page-link" href="#">
+      Page {{ blog_posts.number }} of {{ blog_posts.paginator.num_pages }}.
+      </a>
+    </li>
+    {% if blog_posts.has_next %}
+        <li class="page-item"><a class="page-link" href="?page={{ blog_posts.next_page_number }}">Next</a></li>
+    {% endif %}
+  </ul>
+</nav>
+
 {% endblock %}
